2009-03-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: Bracket the code that draws 3D grid lines with calls to
	term->layer(TERM_LAYER_BEGIN_GRID) and term->layer(TERM_LAYER_END_GRID).

	* term/js/gnuplot_mouse.css term/js/prevzoom.png term/js/nexzoom.png
	term/js/help.png:  Additional icons for the canvas driver.

	* src/graph3d.c (do_3dplot): Define the clipping area in 3D plots to lie
	between the left-most and right-most graph box edges. This is a change!
	The intent is to allow the canvas terminal to use the plot's BoundingBox
	as a zoom region.  If it causes problems for other terminals, we will
	need to create and use a separate BoundingBox for this purpose.

2009-03-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c: Fix assignment of fill patterns to plot boxes and key
	for columnstacked histograms.  Bug #2664732

2009-03-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (find_maxl_keys do_plot): The first entry in a list of
	labels is a placeholder for style information.  Do not reserve space for
	this entry in the key of a columnstacked histogram plot. Bug #2664723

2009-03-03  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in:  Use AC_SEARCH_LIBS rather than AC_CHECK_LIB when
	checking for lua support. This allows for the library to be named
	something other than liblua.so.
	Bug #2637549

2009-03-02  Ethan A Merritt  <merritt@u.washington.edu>

	* term/hpgl.trm term/tgif.trm term/gd.trm src/graphics.c:
	Fix dereference of uninitialized memory, overlapping memcpy, and
	other problems found by valgrind.

2009-03-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm (PS_encode_image print_five_operand_image): Fix
	related to the patch of post.trm from 2009-01-26: images drawn
	"with rgbimage" must always be drawn as rgb colour images.
	SF Patch #2613919: postscript outputs colour RGB as palette image

2009-02-28  Ethan A Merritt  <merritt@u.washington.edu>
